--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">udaeri3</string>
+    <string name="kakao_app_key">0748caf11766ac9e08fcd18567303bb8</string>
 </resources>
